Persistence 19.2.0
* MySQL: Option to store UUID as VARCHAR(36)
* Additional API methods using connection as parameter
* Unique option for @Column annotation
* Delete by id updated to support generic primary key
* Single get returns Optional (INCOMPATIBLE)